feature(api): implement API for GET task by ID. Swagger updated
