# internal/api/task_handler.go
@@ -26,11 +26,13 @@ func sendJSONError(w http.ResponseWriter, err apierr.Error) {
 	_ = json.NewEncoder(w).Encode(err)
 }
 
+// TaskHandler handle request related to Task
 type TaskHandler struct {
 	taskSvc   TaskService
 	validator DtoValidator
 }
 
+// NewTaskHandler is a constructor for TaskHandler
 func NewTaskHandler(taskSvc TaskService) *TaskHandler {
 	return &TaskHandler{
 		taskSvc:   taskSvc,
@@ -38,14 +40,18 @@ func NewTaskHandler(taskSvc TaskService) *TaskHandler {
 	}
 }
 
+// DtoValidator validate all input DTO's which implemented dto.DTO interface
 type DtoValidator interface {
 	Validate(dto dto.DTO) error
 }
 
+// TaskService create Task and check domain rules
 type TaskService interface {
 	Create(ctx context.Context, cmd task.CreateCommand) (domain.Task, error)
+	ReadByID(ctx context.Context, id int64) (domain.Task, error)
 }
 
+// Create external HTTP API for create Task
 func (t *TaskHandler) Create(w http.ResponseWriter, r *http.Request) {
 	log := ctxlib.GetLoggerFromContext(r.Context())
 	requestID := ctxlib.RequestID(r.Context())
@@ -95,5 +101,39 @@ func (t *TaskHandler) Create(w http.ResponseWriter, r *http.Request) {
 	if err := json.NewEncoder(w).Encode(readDto); err != nil {
 		log.Warn("encode dto.ReadTask failed", "error", err)
 	}
-	return
+}
+
+func (t *TaskHandler) Read(w http.ResponseWriter, r *http.Request) {
+	log := ctxlib.GetLoggerFromContext(r.Context())
+	requestID := ctxlib.RequestID(r.Context())
+	id := r.PathValue("id")
+
+	taskID, err := validator.ExtractAndValidateTaskID(id)
+	if err != nil {
+		log.Warn("ExtractAndValidateTaskID failed", "error", err, "id", id)
+		sendJSONError(w, apierr.ValidationFailedError(err.Error(), requestID))
+		return
+	}
+
+	domainTask, err := t.taskSvc.ReadByID(r.Context(), taskID)
+	if err != nil {
+		if errors.Is(err, domain.ErrTaskNotFound) {
+			log.Warn("task not found", "id", id)
+			w.Header().Set("X-Request-ID", requestID)
+			w.WriteHeader(http.StatusNotFound)
+			return
+		}
+		log.Error("read task failed", "error", err, "id", id)
+		w.Header().Set("X-Request-ID", requestID)
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+	readDto := fromDomainTaskToReadTaskDTO(domainTask)
+	w.Header().Set("Content-Type", "application/json")
+	w.Header().Set("X-Request-ID", requestID)
+	w.WriteHeader(http.StatusOK)
+	if err := json.NewEncoder(w).Encode(readDto); err != nil {
+		log.Warn("encode dto.ReadTaskDTO failed", "error", err)
+	}
+	log.Info("read task completed", "id", id)
 }
